# multiarray

./: CMakeLists.txt
include/af/: context.h  multiarray.h
src/: context.cpp  multiarray.cpp
test/: basic_test.cpp
